--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
         <div class="Render Presentation">
             <img src="images/page17.jpg" alt="Page 17">
         </div>
-
+        </div>
 </body>
 </html>
