--- a/index.html
+++ b/index.html
@@ -10,53 +10,53 @@
     <div class="container">
     
         <div class="Render Presentation">
-            <img src="images/page1.jpeg" alt="Page 1 ">
+            <img src="images/page1.jpeg" alt="page 1 ">
         </div>
         <div class="Render Presentation">
-            <img src="images/page2.jpeg" alt="Page 2">
+            <img src="images/page2.jpeg" alt="page 2">
         </div>
         <div class="Render Presentation">
-            <img src="images/page3.jpeg" alt="Page 3">
+            <img src="images/page3.jpeg" alt="page 3">
         </div>
         <div class="Render Presentation">
-            <img src="images/page4.jpeg" alt="Page 4">
+            <img src="images/page4.jpeg" alt="page 4">
         </div>
         <div class="Render Presentation">
-            <img src="images/page5.jpeg" alt="Page 5">
+            <img src="images/page5.jpeg" alt="page 5">
         </div>
         <div class="Render Presentation">
-            <img src="images/page6.jpeg" alt="Page 6">
+            <img src="images/page6.jpeg" alt="page 6">
         <div class="Render Presentation">
             <img src="images/page7.jpeg" alt="Page 7">
         </div>
         <div class="Render Presentation">
-            <img src="images/page8.jpeg" alt="Page 8">
+            <img src="images/page8.jpeg" alt="page 8">
         </div>
         <div class="Render Presentation">
-            <img src="images/page9.jpeg" alt="Page 9">
+            <img src="images/page9.jpeg" alt="page 9">
         </div>
         <div class="Render Presentation">
-            <img src="images/page10.jpeg" alt="Page 10">
+            <img src="images/page10.jpeg" alt="page 10">
         </div>
         <div class="Render Presentation">
-            <img src="images/page11.jpg" alt="Page 11">
+            <img src="images/page11.jpg" alt="page 11">
         </div>
         <div class="Render Presentation">
-            <img src="images/page12.jpg" alt="Page 12">
+            <img src="images/page12.jpg" alt="page 12">
         </div>
         <div class="Render Presentation">
-            <img src="images/page13.jpg" alt="Page 13">
+            <img src="images/page13.jpg" alt="page 13">
         </div>
         <div class="Render Presentation">
-            <img src="images/page14.jpg" alt="Page 14">
+            <img src="images/page14.jpg" alt="page 14">
         <div class="Render Presentation">
-            <img src="images/page15.jpg" alt="Page 15">
+            <img src="images/page15.jpg" alt="page 15">
         </div>
         <div class="Render Presentation">
-            <img src="images/page16.jpg" alt="Page 16">
+            <img src="images/page16.jpg" alt="page 16">
         </div>
         <div class="Render Presentation">
-            <img src="images/page17.jpg" alt="Page 17">
+            <img src="images/page17.jpg" alt="page 17">
         </div>
         </div>
 </body>
