--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
     
         <div class="Render Presentation">
-            <img src="images/page1.jpeg" alt="page 1 ">
+            <img src="images/page1.jpeg" alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
             <img src="images/page2.jpeg" alt="page 2">
