--- a/index.html
+++ b/index.html
@@ -13,50 +13,50 @@
             <img src="images/page1.jpeg" alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page2.jpeg" alt="page 2">
+            <img src="images/page2.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page3.jpeg" alt="page 3">
+            <img src="images/page3.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page4.jpeg" alt="page 4">
+            <img src="images/page4.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page5.jpeg" alt="page 5">
+            <img src="images/page5.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page6.jpeg" alt="page 6">
+            <img src="images/page6.jpeg"  alt="Building image" width="500" height="300">>
         <div class="Render Presentation">
-            <img src="images/page7.jpeg" alt="Page 7">
+            <img src="images/page7.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page8.jpeg" alt="page 8">
+            <img src="images/page8.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page9.jpeg" alt="page 9">
+            <img src="images/page9.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page10.jpeg" alt="page 10">
+            <img src="images/page10.jpeg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page11.jpg" alt="page 11">
+            <img src="images/page11.jpg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page12.jpg" alt="page 12">
+            <img src="images/page12.jpg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page13.jpg" alt="page 13">
+            <img src="images/page13.jpg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page14.jpg" alt="page 14">
+            <img src="images/page14.jpg"  alt="Building image" width="500" height="300">>
         <div class="Render Presentation">
-            <img src="images/page15.jpg" alt="page 15">
+            <img src="images/page15.jpg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page16.jpg" alt="page 16">
+            <img src="images/page16.jpg"  alt="Building image" width="500" height="300">>
         </div>
         <div class="Render Presentation">
-            <img src="images/page17.jpg" alt="page 17">
+            <img src="images/page17.jpg"  alt="Building image" width="500" height="300">>
         </div>
         </div>
 </body>
