--- a/index.html
+++ b/index.html
@@ -10,53 +10,53 @@
     <div class="container">
     
         <div class="Render Presentation">
-            <img src="images/page1.jpeg" alt="Building image" width="500" height="300">
+            <img src="images/page1.jpeg" alt="Building image" width="700" height="500">
         </div>
         <div class="Render Presentation">
-            <img src="images/page2.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page2.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page3.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page3.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page4.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page4.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page5.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page5.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page6.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page6.jpeg"  alt="Building image" width="500" height="300">
         <div class="Render Presentation">
-            <img src="images/page7.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page7.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page8.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page8.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page9.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page9.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page10.jpeg"  alt="Building image" width="500" height="300">>
+            <img src="images/page10.jpeg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page11.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page11.jpg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page12.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page12.jpg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page13.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page13.jpg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page14.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page14.jpg"  alt="Building image" width="500" height="300">
         <div class="Render Presentation">
-            <img src="images/page15.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page15.jpg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page16.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page16.jpg"  alt="Building image" width="500" height="300">
         </div>
         <div class="Render Presentation">
-            <img src="images/page17.jpg"  alt="Building image" width="500" height="300">>
+            <img src="images/page17.jpg"  alt="Building image" width="500" height="300">
         </div>
         </div>
 </body>
