--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="images/page16.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page17.jpg"  alt="Building image" width="500" height="300">
+            <img src="images/page17.jpg"  alt="Building image" >
         </div>
         </div>
 </body>
