--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title> Suhasa 3D Render Presentation</title>
     
 </head>
+    <style>
+        img{
+            width:600px;
+            height:auto;
+        }
+    </style>
 <body>
     <div class="container">
     
