--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         img{
             width:600px;
             height:auto;
+            display:block;
+            margin:0 auto;
+            width:50%;
         }
     </style>
 <body>
