--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title> Suhasa 3D Render Presentation</title>
     
 </head>
+    <style>
+        img{
+            max-width:100%;
+            height:auto;
+            display:block;
+            margin:0 auto;
+        }
+    </style>
 <body>
     <div class="container">
     
