--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
             <img src="images/page1.jpeg" alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page2.jpeg"  alt="Building image" >
+            <img src="images/page2.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page3.jpeg"  alt="Building image" >
+            <img src="images/page3.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page4.jpeg"  alt="Building image">
+            <img src="images/page4.jpg"  alt="Building image">
         </div>
         <div class="Render Presentation">
-            <img src="images/page5.jpeg"  alt="Building image" >
+            <img src="images/page5.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page6.jpeg"  alt="Building image" >
+            <img src="images/page6.jpg"  alt="Building image" >
         <div class="Render Presentation">
-            <img src="images/page7.jpeg"  alt="Building image" >
+            <img src="images/page7.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page8.jpeg"  alt="Building image" >
+            <img src="images/page8.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page9.jpeg"  alt="Building image" >
+            <img src="images/page9.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
-            <img src="images/page10.jpeg"  alt="Building image" >
+            <img src="images/page10.jpg"  alt="Building image" >
         </div>
         <div class="Render Presentation">
             <img src="images/page11.jpg"  alt="Building image" >
